crates/postgres-subsystem/postgres-model-builder/src/snapshots/column_names_for_non_standard_relational_field_names.snap
---
source: crates/postgres-subsystem/postgres-model-builder/src/resolved_builder.rs
expression: resolved
---
values:
  - - ~
    - Primitive: Boolean
  - - ~
    - Primitive: Int
  - - ~
    - Primitive: Float
  - - ~
    - Primitive: Decimal
  - - ~
    - Primitive: String
  - - ~
    - Primitive: LocalTime
  - - ~
    - Primitive: LocalDateTime
  - - ~
    - Primitive: LocalDate
  - - ~
    - Primitive: Instant
  - - ~
    - Primitive: Json
  - - ~
    - Primitive: Blob
  - - ~
    - Primitive: Uuid
  - - ~
    - Primitive: Vector
  - - ~
    - Primitive: Exograph
  - - ~
    - Primitive: ExographPriv
  - - ~
    - Primitive:
        Interception: Operation
  - - ~
    - Composite:
        name: Concert
        plural_name: Concerts
        fields:
          - name: id
            typ:
              Plain:
                type_name: Int
                is_primitive: true
            column_name: id
            self_column: true
            is_pk: true
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            default_value: AutoIncrement
            update_sync: false
            readonly: false
          - name: title
            typ:
              Plain:
                type_name: String
                is_primitive: true
            column_name: title
            self_column: true
            is_pk: false
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            default_value: ~
            update_sync: false
            readonly: false
          - name: venuex
            typ:
              Plain:
                type_name: Venue
                is_primitive: false
            column_name: venuex_id
            self_column: true
            is_pk: false
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            default_value: ~
            update_sync: false
            readonly: false
          - name: published
            typ:
              Plain:
                type_name: Boolean
                is_primitive: true
            column_name: published
            self_column: true
            is_pk: false
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            default_value: ~
            update_sync: false
            readonly: false
        table_name:
          name: concerts
          schema: ~
        access:
          default: ~
          query: ~
          mutation: ~
          creation: ~
          update: ~
          delete: ~
  - - ~
    - Composite:
        name: Venue
        plural_name: Venues
        fields:
          - name: id
            typ:
              Plain:
                type_name: Int
                is_primitive: true
            column_name: id
            self_column: true
            is_pk: true
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            default_value: AutoIncrement
            update_sync: false
            readonly: false
          - name: name
            typ:
              Plain:
                type_name: String
                is_primitive: true
            column_name: name
            self_column: true
            is_pk: false
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            default_value: ~
            update_sync: false
            readonly: false
          - name: concerts
            typ:
              List:
                Plain:
                  type_name: Concert
                  is_primitive: false
            column_name: venuex_id
            self_column: false
            is_pk: false
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            default_value: ~
            update_sync: false
            readonly: false
          - name: published
            typ:
              Plain:
                type_name: Boolean
                is_primitive: true
            column_name: published
            self_column: true
            is_pk: false
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            default_value: ~
            update_sync: false
            readonly: false
        table_name:
          name: venues
          schema: ~
        access:
          default: ~
          query: ~
          mutation: ~
          creation: ~
          update: ~
          delete: ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
map:
  Blob:
    index: 10
    generation: ~
  Boolean:
    index: 0
    generation: ~
  Concert:
    index: 16
    generation: ~
  Decimal:
    index: 3
    generation: ~
  Exograph:
    index: 13
    generation: ~
  ExographPriv:
    index: 14
    generation: ~
  Float:
    index: 2
    generation: ~
  Instant:
    index: 8
    generation: ~
  Int:
    index: 1
    generation: ~
  Json:
    index: 9
    generation: ~
  LocalDate:
    index: 7
    generation: ~
  LocalDateTime:
    index: 6
    generation: ~
  LocalTime:
    index: 5
    generation: ~
  Operation:
    index: 15
    generation: ~
  String:
    index: 4
    generation: ~
  Uuid:
    index: 11
    generation: ~
  Vector:
    index: 12
    generation: ~
  Venue:
    index: 17
    generation: ~
