crates/postgres-subsystem/postgres-model-builder/src/snapshots/with_access_default_values.snap
---
source: crates/postgres-subsystem/postgres-model-builder/src/resolved_builder.rs
expression: resolved
---
values:
  - - ~
    - Primitive: Boolean
  - - ~
    - Primitive: Int
  - - ~
    - Primitive: Float
  - - ~
    - Primitive: Decimal
  - - ~
    - Primitive: String
  - - ~
    - Primitive: LocalTime
  - - ~
    - Primitive: LocalDateTime
  - - ~
    - Primitive: LocalDate
  - - ~
    - Primitive: Instant
  - - ~
    - Primitive: Json
  - - ~
    - Primitive: Blob
  - - ~
    - Primitive: Uuid
  - - ~
    - Primitive: Vector
  - - ~
    - Primitive: Exograph
  - - ~
    - Primitive: ExographPriv
  - - ~
    - Primitive:
        Interception: Operation
  - - ~
    - Composite:
        name: Concert
        plural_name: Concerts
        fields:
          - name: id
            typ:
              Plain:
                type_name: Int
                is_primitive: true
            column_name: id
            self_column: true
            is_pk: true
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            default_value: AutoIncrement
            update_sync: false
          - name: title
            typ:
              Plain:
                type_name: String
                is_primitive: true
            column_name: title
            self_column: true
            is_pk: false
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            default_value: ~
            update_sync: false
          - name: public
            typ:
              Plain:
                type_name: Boolean
                is_primitive: true
            column_name: public
            self_column: true
            is_pk: false
            access:
              default:
                BooleanLiteral:
                  - true
              query: ~
              mutation: ~
              creation: ~
              update: ~
              delete: ~
            type_hint: ~
            unique_constraints: []
            indices: []
            default_value: ~
            update_sync: false
        table_name:
          name: concerts
          schema: ~
        access:
          default:
            LogicalOp:
              Or:
                - RelationalOp:
                    Eq:
                      - FieldSelection:
                          Select:
                            - Single:
                                - Identifier:
                                    - AuthContext
                                    - Reference:
                                        index: 16
                                        generation: ~
                                - Reference:
                                    index: 16
                                    generation: ~
                            - Identifier:
                                - role
                                - Defer
                            - Reference:
                                index: 4
                                generation: ~
                      - StringLiteral:
                          - ROLE_ADMIN
                      - Primitive: Boolean
                - FieldSelection:
                    Select:
                      - Single:
                          - Identifier:
                              - self
                              - Reference:
                                  index: 17
                                  generation: ~
                          - Reference:
                              index: 17
                              generation: ~
                      - Identifier:
                          - public
                          - Defer
                      - Reference:
                          index: 0
                          generation: ~
                - Primitive: Boolean
          query: ~
          mutation: ~
          creation: ~
          update: ~
          delete: ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
  - ~
map:
  Blob:
    index: 10
    generation: ~
  Boolean:
    index: 0
    generation: ~
  Concert:
    index: 16
    generation: ~
  Decimal:
    index: 3
    generation: ~
  Exograph:
    index: 13
    generation: ~
  ExographPriv:
    index: 14
    generation: ~
  Float:
    index: 2
    generation: ~
  Instant:
    index: 8
    generation: ~
  Int:
    index: 1
    generation: ~
  Json:
    index: 9
    generation: ~
  LocalDate:
    index: 7
    generation: ~
  LocalDateTime:
    index: 6
    generation: ~
  LocalTime:
    index: 5
    generation: ~
  Operation:
    index: 15
    generation: ~
  String:
    index: 4
    generation: ~
  Uuid:
    index: 11
    generation: ~
  Vector:
    index: 12
    generation: ~
